# yolo-v1

./: .gitignore  LICENSE  README.md  predict.py  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml
examples/: backbone_usage.py  dataloader_demo.py  download_dataset.py  inference_demo.py  map_metrics_demo.py  test_augmentations.py
issues/3/sub-issues/: implement-yolov1-loss-function.md
manim/: scenes.py
notebooks/: network_activations.ipynb
src/: evaluate.py  predict.py  train.py
src/yolo/: __init__.py  config.py  dataset.py  inference.py  loss.py  metrics.py  model.py  models.py  schemas.py
src/yolo/data/: __init__.py  base.py  download.py  pascal_voc.py  utils.py
src/yolo/training/: __init__.py  checkpoints.py  logging.py  trainer.py
src/yolo/utils/: __init__.py  visualization.py
tests/: __init__.py  test_backbone.py  test_dataloader.py  test_inference_setup.py  test_metrics.py  test_voc_wrapper.py  test_yolo.py
